--- a/pdf-app/public/index.html
+++ b/pdf-app/public/index.html
@@ -1,65 +1,221 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Convert JPEG/PNG images to PDF entirely on your device." />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <title>Convert Image to PDF</title>
+    <!-- Google Fonts for modern typography -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap"
+      rel="stylesheet"
+    />
+    <style>
+      /* Global Styles */
+      html,
+      body {
+        height: 100%;
+        margin: 0;
+        font-family: 'Roboto', sans-serif;
+        background: linear-gradient(135deg, #f5f7fa, #c3cfe2);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+      /* Landing Page Container */
+      .landing-page {
+        background: #fff;
+        border-radius: 12px;
+        box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+        padding: 40px;
+        max-width: 600px;
+        width: 90%;
+        text-align: center;
+        animation: fadeInUp 0.8s ease-out;
+      }
+      @keyframes fadeInUp {
+        from {
+          opacity: 0;
+          transform: translateY(20px);
+        }
+        to {
+          opacity: 1;
+          transform: translateY(0);
+        }
+      }
+      h1 {
+        margin-top: 0;
+      }
+      p.description {
+        margin-bottom: 20px;
+        color: #555;
+      }
+      /* Button Styles */
+      .big-btn {
+        background-color: #007bff;
+        color: #fff;
+        border: none;
+        padding: 15px 30px;
+        font-size: 1.1em;
+        border-radius: 30px;
+        cursor: pointer;
+        transition: background-color 0.3s ease, transform 0.2s ease;
+        margin-bottom: 20px;
+      }
+      .big-btn:hover {
+        background-color: #0056b3;
+        transform: scale(1.03);
+      }
+      /* Dropzone Styles */
+      .dropzone {
+        border: 2px dashed #007bff;
+        border-radius: 12px;
+        padding: 40px;
+        transition: background-color 0.3s ease;
+        color: #007bff;
+        font-size: 1.1em;
+        margin-bottom: 20px;
+      }
+      .dropzone.dragover {
+        background-color: #e9f5ff;
+      }
+      /* File List Styles */
+      .file-list {
+        list-style: none;
+        padding: 0;
+        margin-top: 20px;
+        text-align: left;
+      }
+      .file-item {
+        padding: 10px;
+        border-bottom: 1px solid #eee;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+      }
+      .file-item:last-child {
+        border-bottom: none;
+      }
+      .file-name {
+        font-weight: 500;
+      }
+      .file-size {
+        font-size: 0.9em;
+        color: #666;
+      }
+      /* Responsive adjustments */
+      @media (max-width: 600px) {
+        .landing-page {
+          padding: 20px;
+        }
+        .big-btn {
+          width: 100%;
+        }
+      }
+    </style>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DMQJXRM5LV"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "G-DMQJXRM5LV");
+    </script>
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
 
-<head>
-  <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  <link rel="stylesheet" href="./static.css">
-  <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-  <title>Convert Image to PDF</title>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-DMQJXRM5LV"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-
-    gtag('config', 'G-DMQJXRM5LV');
-  </script>
-</head>
-
-<body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
-
-  <div id="root">
-    <div class="landing-page">
-      <div style="padding: 40px">
-        Convert JPEG or PNG images to PDF without uploading your sensitve data anywhere.
-        <br />
-        Files are processed entirely on your device and does not get uploaded to any server.
-      </div>
-      <button class="big-btn">Select Images</button>
-      <div class="dropzone">
+    <div id="root">
+      <div class="landing-page">
+        <h1>Convert Images to PDF</h1>
+        <p class="description">
+          Convert JPEG or PNG images to PDF without uploading your sensitive data anywhere.
+          Files are processed entirely on your device.
+        </p>
+        <button class="big-btn" id="selectImages">Select Images</button>
+        <div class="dropzone" id="dropzone">
+          <p>Drag &amp; Drop your images here</p>
+        </div>
+        <ul class="file-list" id="fileList"></ul>
+        <button class="big-btn" id="convertBtn" style="display: none;">
+          Convert to PDF
+        </button>
       </div>
     </div>
-  </div>
-  <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+    <script>
+      // Interactive File Handling Logic
+      const dropzone = document.getElementById("dropzone");
+      const selectImagesButton = document.getElementById("selectImages");
+      const fileList = document.getElementById("fileList");
+      const convertBtn = document.getElementById("convertBtn");
+      let files = [];
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-</body>
+      // Create hidden file input element
+      const fileInput = document.createElement("input");
+      fileInput.type = "file";
+      fileInput.accept = "image/jpeg, image/png";
+      fileInput.multiple = true;
+      fileInput.style.display = "none";
+      document.body.appendChild(fileInput);
 
+      selectImagesButton.addEventListener("click", () => {
+        fileInput.click();
+      });
+
+      fileInput.addEventListener("change", (e) => {
+        handleFiles(e.target.files);
+      });
+
+      // Drag & Drop events
+      dropzone.addEventListener("dragover", (e) => {
+        e.preventDefault();
+        dropzone.classList.add("dragover");
+      });
+      dropzone.addEventListener("dragleave", (e) => {
+        e.preventDefault();
+        dropzone.classList.remove("dragover");
+      });
+      dropzone.addEventListener("drop", (e) => {
+        e.preventDefault();
+        dropzone.classList.remove("dragover");
+        if (e.dataTransfer.files) {
+          handleFiles(e.dataTransfer.files);
+        }
+      });
+
+      function handleFiles(selectedFiles) {
+        Array.from(selectedFiles).forEach((file) => {
+          if (file.type === "image/jpeg" || file.type === "image/png") {
+            files.push(file);
+            displayFile(file);
+          }
+        });
+        if (files.length > 0) {
+          convertBtn.style.display = "inline-block";
+        }
+      }
+
+      function displayFile(file) {
+        const li = document.createElement("li");
+        li.className = "file-item";
+        li.innerHTML = `
+          <span class="file-name">${file.name}</span>
+          <span class="file-size">${(file.size / 1024).toFixed(1)} KB</span>
+        `;
+        fileList.appendChild(li);
+      }
+
+      // Dummy conversion trigger (replace with actual PDF conversion logic)
+      convertBtn.addEventListener("click", () => {
+        alert(`Conversion to PDF initiated with ${files.length} image(s).`);
+      });
+    </script>
+  </body>
 </html>
