--- a/pdf-app/public/index.html
+++ b/pdf-app/public/index.html
@@ -5,118 +5,14 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Convert JPEG/PNG images to PDF entirely on your device." />
+    <meta
+      name="description"
+      content="Convert JPEG or PNG images to PDF without uploading your sensitive data anywhere."
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" href="./static.css" />
     <title>Convert Image to PDF</title>
-    <!-- Google Fonts for modern typography -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap"
-      rel="stylesheet"
-    />
-    <style>
-      /* Global Styles */
-      html,
-      body {
-        height: 100%;
-        margin: 0;
-        font-family: 'Roboto', sans-serif;
-        background: linear-gradient(135deg, #f5f7fa, #c3cfe2);
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
-      /* Landing Page Container */
-      .landing-page {
-        background: #fff;
-        border-radius: 12px;
-        box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
-        padding: 40px;
-        max-width: 600px;
-        width: 90%;
-        text-align: center;
-        animation: fadeInUp 0.8s ease-out;
-      }
-      @keyframes fadeInUp {
-        from {
-          opacity: 0;
-          transform: translateY(20px);
-        }
-        to {
-          opacity: 1;
-          transform: translateY(0);
-        }
-      }
-      h1 {
-        margin-top: 0;
-      }
-      p.description {
-        margin-bottom: 20px;
-        color: #555;
-      }
-      /* Button Styles */
-      .big-btn {
-        background-color: #007bff;
-        color: #fff;
-        border: none;
-        padding: 15px 30px;
-        font-size: 1.1em;
-        border-radius: 30px;
-        cursor: pointer;
-        transition: background-color 0.3s ease, transform 0.2s ease;
-        margin-bottom: 20px;
-      }
-      .big-btn:hover {
-        background-color: #0056b3;
-        transform: scale(1.03);
-      }
-      /* Dropzone Styles */
-      .dropzone {
-        border: 2px dashed #007bff;
-        border-radius: 12px;
-        padding: 40px;
-        transition: background-color 0.3s ease;
-        color: #007bff;
-        font-size: 1.1em;
-        margin-bottom: 20px;
-      }
-      .dropzone.dragover {
-        background-color: #e9f5ff;
-      }
-      /* File List Styles */
-      .file-list {
-        list-style: none;
-        padding: 0;
-        margin-top: 20px;
-        text-align: left;
-      }
-      .file-item {
-        padding: 10px;
-        border-bottom: 1px solid #eee;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-      }
-      .file-item:last-child {
-        border-bottom: none;
-      }
-      .file-name {
-        font-weight: 500;
-      }
-      .file-size {
-        font-size: 0.9em;
-        color: #666;
-      }
-      /* Responsive adjustments */
-      @media (max-width: 600px) {
-        .landing-page {
-          padding: 20px;
-        }
-        .big-btn {
-          width: 100%;
-        }
-      }
-    </style>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-DMQJXRM5LV"></script>
     <script>
@@ -127,95 +23,105 @@
       gtag("js", new Date());
       gtag("config", "G-DMQJXRM5LV");
     </script>
+    <style>
+      /* Global Styles */
+      body {
+        margin: 0;
+        padding: 0;
+        font-family: 'Roboto', sans-serif;
+        background: linear-gradient(135deg, #e2e2e2, #ffffff);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        min-height: 100vh;
+      }
+
+      /* Landing Page Container */
+      .landing-page {
+        background: #fff;
+        border-radius: 12px;
+        box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+        width: 90%;
+        max-width: 600px;
+        padding: 40px;
+        text-align: center;
+        animation: fadeIn 0.8s ease;
+      }
+
+      @keyframes fadeIn {
+        from {
+          opacity: 0;
+          transform: translateY(20px);
+        }
+        to {
+          opacity: 1;
+          transform: translateY(0);
+        }
+      }
+
+      /* Description Text */
+      .description {
+        margin-bottom: 30px;
+        font-size: 1.1em;
+        color: #333;
+      }
+
+      /* Button Styling */
+      .big-btn {
+        background-color: #007bff;
+        color: #fff;
+        border: none;
+        padding: 15px 30px;
+        font-size: 1em;
+        border-radius: 30px;
+        cursor: pointer;
+        transition: background-color 0.3s ease, transform 0.2s ease;
+        margin-bottom: 30px;
+      }
+
+      .big-btn:hover {
+        background-color: #0056b3;
+        transform: scale(1.05);
+      }
+
+      /* Dropzone Styling */
+      .dropzone {
+        border: 2px dashed #007bff;
+        border-radius: 12px;
+        padding: 40px;
+        color: #007bff;
+        font-size: 1em;
+        transition: background-color 0.3s ease, border-color 0.3s ease;
+      }
+
+      .dropzone:hover {
+        background-color: #f0f8ff;
+        border-color: #0056b3;
+      }
+
+      /* Responsive adjustments */
+      @media (max-width: 600px) {
+        .landing-page {
+          padding: 20px;
+        }
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-
     <div id="root">
       <div class="landing-page">
-        <h1>Convert Images to PDF</h1>
-        <p class="description">
-          Convert JPEG or PNG images to PDF without uploading your sensitive data anywhere.
-          Files are processed entirely on your device.
-        </p>
-        <button class="big-btn" id="selectImages">Select Images</button>
-        <div class="dropzone" id="dropzone">
-          <p>Drag &amp; Drop your images here</p>
+        <div class="description">
+          Convert JPEG or PNG images to PDF without uploading your sensitive data
+          anywhere.<br />
+          Files are processed entirely on your device and do not get uploaded to any
+          server.
         </div>
-        <ul class="file-list" id="fileList"></ul>
-        <button class="big-btn" id="convertBtn" style="display: none;">
-          Convert to PDF
-        </button>
+        <button class="big-btn">Select Images</button>
+        <div class="dropzone">
+          Drag &amp; Drop your images here
+        </div>
       </div>
     </div>
-
-    <script>
-      // Interactive File Handling Logic
-      const dropzone = document.getElementById("dropzone");
-      const selectImagesButton = document.getElementById("selectImages");
-      const fileList = document.getElementById("fileList");
-      const convertBtn = document.getElementById("convertBtn");
-      let files = [];
-
-      // Create hidden file input element
-      const fileInput = document.createElement("input");
-      fileInput.type = "file";
-      fileInput.accept = "image/jpeg, image/png";
-      fileInput.multiple = true;
-      fileInput.style.display = "none";
-      document.body.appendChild(fileInput);
-
-      selectImagesButton.addEventListener("click", () => {
-        fileInput.click();
-      });
-
-      fileInput.addEventListener("change", (e) => {
-        handleFiles(e.target.files);
-      });
-
-      // Drag & Drop events
-      dropzone.addEventListener("dragover", (e) => {
-        e.preventDefault();
-        dropzone.classList.add("dragover");
-      });
-      dropzone.addEventListener("dragleave", (e) => {
-        e.preventDefault();
-        dropzone.classList.remove("dragover");
-      });
-      dropzone.addEventListener("drop", (e) => {
-        e.preventDefault();
-        dropzone.classList.remove("dragover");
-        if (e.dataTransfer.files) {
-          handleFiles(e.dataTransfer.files);
-        }
-      });
-
-      function handleFiles(selectedFiles) {
-        Array.from(selectedFiles).forEach((file) => {
-          if (file.type === "image/jpeg" || file.type === "image/png") {
-            files.push(file);
-            displayFile(file);
-          }
-        });
-        if (files.length > 0) {
-          convertBtn.style.display = "inline-block";
-        }
-      }
-
-      function displayFile(file) {
-        const li = document.createElement("li");
-        li.className = "file-item";
-        li.innerHTML = `
-          <span class="file-name">${file.name}</span>
-          <span class="file-size">${(file.size / 1024).toFixed(1)} KB</span>
-        `;
-        fileList.appendChild(li);
-      }
-
-      // Dummy conversion trigger (replace with actual PDF conversion logic)
-      convertBtn.addEventListener("click", () => {
-        alert(`Conversion to PDF initiated with ${files.length} image(s).`);
-      });
-    </script>
   </body>
 </html>
