--- a/pdf-app/public/index.html
+++ b/pdf-app/public/index.html
@@ -1,127 +1,181 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Convert JPEG or PNG images to PDF without uploading your sensitive data anywhere."
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="stylesheet" href="./static.css" />
-    <title>Convert Image to PDF</title>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DMQJXRM5LV"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-      gtag("config", "G-DMQJXRM5LV");
-    </script>
-    <style>
-      /* Global Styles */
-      body {
-        margin: 0;
-        padding: 0;
-        font-family: 'Roboto', sans-serif;
-        background: linear-gradient(135deg, #e2e2e2, #ffffff);
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        min-height: 100vh;
-      }
 
-      /* Landing Page Container */
-      .landing-page {
-        background: #fff;
-        border-radius: 12px;
-        box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-        width: 90%;
-        max-width: 600px;
-        padding: 40px;
-        text-align: center;
-        animation: fadeIn 0.8s ease;
-      }
+<head>
+  <!-- Previous meta tags remain same -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+  <style>
+    :root {
+      --primary: #6366f1;
+      --primary-hover: #4f46e5;
+      --accent: #22d3ee;
+      --background: #0f172a;
+      --text: #f8fafc;
+    }
 
-      @keyframes fadeIn {
-        from {
-          opacity: 0;
-          transform: translateY(20px);
-        }
-        to {
-          opacity: 1;
-          transform: translateY(0);
-        }
-      }
+    body {
+      margin: 0;
+      font-family: 'Inter', sans-serif;
+      background: linear-gradient(135deg, var(--background) 0%, #1e293b 100%);
+      color: var(--text);
+      min-height: 100vh;
+    }
 
-      /* Description Text */
-      .description {
-        margin-bottom: 30px;
-        font-size: 1.1em;
-        color: #333;
-      }
+    .landing-page {
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 2rem;
+      text-align: center;
+      position: relative;
+    }
 
-      /* Button Styling */
-      .big-btn {
-        background-color: #007bff;
-        color: #fff;
-        border: none;
-        padding: 15px 30px;
-        font-size: 1em;
-        border-radius: 30px;
-        cursor: pointer;
-        transition: background-color 0.3s ease, transform 0.2s ease;
-        margin-bottom: 30px;
-      }
+    .hero-text {
+      font-size: 1.2rem;
+      line-height: 1.6;
+      color: #94a3b8;
+      margin: 2rem 0;
+      padding: 2rem;
+      background: rgba(15, 23, 42, 0.5);
+      border-radius: 1rem;
+      backdrop-filter: blur(10px);
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      animation: fadeIn 0.8s ease-out;
+    }
 
-      .big-btn:hover {
-        background-color: #0056b3;
-        transform: scale(1.05);
-      }
+    .big-btn {
+      background: linear-gradient(135deg, var(--primary) 0%, var(--accent) 100%);
+      border: none;
+      padding: 1.5rem 3rem;
+      font-size: 1.1rem;
+      font-weight: 600;
+      color: white;
+      border-radius: 1rem;
+      cursor: pointer;
+      transition: all 0.3s ease;
+      box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+        0 2px 4px -1px rgba(0, 0, 0, 0.06);
+      position: relative;
+      overflow: hidden;
+    }
 
-      /* Dropzone Styling */
-      .dropzone {
-        border: 2px dashed #007bff;
-        border-radius: 12px;
-        padding: 40px;
-        color: #007bff;
-        font-size: 1em;
-        transition: background-color 0.3s ease, border-color 0.3s ease;
-      }
+    .big-btn:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+        0 4px 6px -2px rgba(0, 0, 0, 0.05);
+    }
 
-      .dropzone:hover {
-        background-color: #f0f8ff;
-        border-color: #0056b3;
-      }
+    .big-btn:active {
+      transform: translateY(0);
+    }
 
-      /* Responsive adjustments */
-      @media (max-width: 600px) {
-        .landing-page {
-          padding: 20px;
-        }
-      }
-    </style>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root">
-      <div class="landing-page">
-        <div class="description">
-          Convert JPEG or PNG images to PDF without uploading your sensitive data
-          anywhere.<br />
-          Files are processed entirely on your device and do not get uploaded to any
-          server.
-        </div>
-        <button class="big-btn">Select Images</button>
-        <div class="dropzone">
-          Drag &amp; Drop your images here
-        </div>
+    .dropzone {
+      border: 2px dashed rgba(255, 255, 255, 0.2);
+      border-radius: 1rem;
+      padding: 3rem;
+      margin: 2rem 0;
+      transition: all 0.3s ease;
+      background: rgba(255, 255, 255, 0.02);
+      position: relative;
+    }
+
+    .dropzone:hover {
+      border-color: var(--accent);
+      background: rgba(255, 255, 255, 0.05);
+    }
+
+    .dropzone::before {
+      content: "📁 Drag & Drop Files Here";
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color: #94a3b8;
+      font-weight: 500;
+    }
+
+    .security-badge {
+      display: inline-flex;
+      align-items: center;
+      gap: 0.5rem;
+      padding: 0.8rem 1.5rem;
+      background: rgba(34, 211, 238, 0.1);
+      border-radius: 2rem;
+      margin: 2rem 0;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    .loading-bar {
+      width: 0%;
+      height: 3px;
+      background: var(--accent);
+      position: fixed;
+      top: 0;
+      left: 0;
+      transition: width 0.3s ease;
+    }
+
+    .floating-shapes {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+      z-index: -1;
+    }
+
+    .floating-shapes div {
+      position: absolute;
+      background: linear-gradient(45deg, var(--primary), var(--accent));
+      opacity: 0.1;
+      filter: blur(40px);
+    }
+  </style>
+</head>
+
+<body>
+  <div class="loading-bar"></div>
+  <div class="floating-shapes">
+    <div style="width: 200px; height: 200px; top: 20%; left: 10%"></div>
+    <div style="width: 150px; height: 150px; top: 60%; right: 15%"></div>
+  </div>
+
+  <div id="root">
+    <div class="landing-page">
+      <div class="hero-text">
+        <i class="fas fa-shield-alt"></i> Convert JPEG or PNG images to PDF securely
+        <br />
+        <span style="font-size: 0.9em; color: #64748b;">
+          All processing happens locally in your browser - no data leaves your device
+        </span>
       </div>
+
+      <button class="big-btn">
+        <i class="fas fa-folder-open"></i> Select Images
+        <span class="hover-effect"></span>
+      </button>
+
+      <div class="security-badge">
+        <i class="fas fa-lock"></i>
+        <span>100% Client-Side Processing</span>
+      </div>
+
+      <div class="dropzone"></div>
     </div>
-  </body>
+  </div>
+
+  <script>
+    // Add subtle hover effect to buttons
+    document.querySelectorAll('.big-btn').forEach(btn => {
+      btn.addEventListener('mousemove', e => {
+        const rect = btn.getBoundingClientRect();
+        btn.style.setProperty('--x', `${e.clientX - rect.left}px`);
+        btn.style.setProperty('--y', `${e.clientY - rect.top}px`);
+      });
+    });
+  </script>
+</body>
 </html>
