--- a/pdf-app/public/index.html
+++ b/pdf-app/public/index.html
@@ -2,180 +2,116 @@
 <html lang="en">
 
 <head>
-  <!-- Previous meta tags remain same -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Web site created using create-react-app" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="stylesheet" href="./static.css">
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <title>Convert Image to PDF</title>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-DMQJXRM5LV"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-DMQJXRM5LV');
+  </script>
   <style>
-    :root {
-      --primary: #6366f1;
-      --primary-hover: #4f46e5;
-      --accent: #22d3ee;
-      --background: #0f172a;
-      --text: #f8fafc;
-    }
-
     body {
+      font-family: 'Arial', sans-serif;
+      background: linear-gradient(135deg, #f5f7fa, #c3cfe2);
+      color: #333;
       margin: 0;
-      font-family: 'Inter', sans-serif;
-      background: linear-gradient(135deg, var(--background) 0%, #1e293b 100%);
-      color: var(--text);
-      min-height: 100vh;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      transition: background 0.5s;
     }
 
     .landing-page {
-      max-width: 800px;
-      margin: 0 auto;
-      padding: 2rem;
       text-align: center;
-      position: relative;
+      padding: 20px;
+      border-radius: 15px;
+      background: white;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      transition: transform 0.3s, box-shadow 0.3s;
     }
 
-    .hero-text {
-      font-size: 1.2rem;
-      line-height: 1.6;
-      color: #94a3b8;
-      margin: 2rem 0;
-      padding: 2rem;
-      background: rgba(15, 23, 42, 0.5);
-      border-radius: 1rem;
-      backdrop-filter: blur(10px);
-      border: 1px solid rgba(255, 255, 255, 0.1);
-      animation: fadeIn 0.8s ease-out;
+    .landing-page:hover {
+      transform: translateY(-10px);
+      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    }
+
+    .landing-page div {
+      font-size: 1.2em;
+      margin-bottom: 20px;
     }
 
     .big-btn {
-      background: linear-gradient(135deg, var(--primary) 0%, var(--accent) 100%);
-      border: none;
-      padding: 1.5rem 3rem;
-      font-size: 1.1rem;
-      font-weight: 600;
+      background: #007BFF;
       color: white;
-      border-radius: 1rem;
+      border: none;
+      padding: 15px 30px;
+      font-size: 1.2em;
+      border-radius: 30px;
       cursor: pointer;
-      transition: all 0.3s ease;
-      box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
-        0 2px 4px -1px rgba(0, 0, 0, 0.06);
-      position: relative;
-      overflow: hidden;
+      transition: background 0.3s, transform 0.3s;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     }
 
     .big-btn:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
-        0 4px 6px -2px rgba(0, 0, 0, 0.05);
-    }
-
-    .big-btn:active {
-      transform: translateY(0);
+      background: #0056b3;
+      transform: translateY(-3px);
+      box-shadow: 0 6px 8px rgba(0, 0, 0, 0.2);
     }
 
     .dropzone {
-      border: 2px dashed rgba(255, 255, 255, 0.2);
-      border-radius: 1rem;
-      padding: 3rem;
-      margin: 2rem 0;
-      transition: all 0.3s ease;
-      background: rgba(255, 255, 255, 0.02);
-      position: relative;
+      margin-top: 20px;
+      padding: 20px;
+      border: 2px dashed #007BFF;
+      border-radius: 10px;
+      background: #f9f9f9;
+      transition: background 0.3s, border-color 0.3s;
     }
 
     .dropzone:hover {
-      border-color: var(--accent);
-      background: rgba(255, 255, 255, 0.05);
+      background: #e9e9e9;
+      border-color: #0056b3;
     }
 
-    .dropzone::before {
-      content: "📁 Drag & Drop Files Here";
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      color: #94a3b8;
-      font-weight: 500;
-    }
+    @media (max-width: 600px) {
+      .landing-page div {
+        font-size: 1em;
+      }
 
-    .security-badge {
-      display: inline-flex;
-      align-items: center;
-      gap: 0.5rem;
-      padding: 0.8rem 1.5rem;
-      background: rgba(34, 211, 238, 0.1);
-      border-radius: 2rem;
-      margin: 2rem 0;
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    .loading-bar {
-      width: 0%;
-      height: 3px;
-      background: var(--accent);
-      position: fixed;
-      top: 0;
-      left: 0;
-      transition: width 0.3s ease;
-    }
-
-    .floating-shapes {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      overflow: hidden;
-      z-index: -1;
-    }
-
-    .floating-shapes div {
-      position: absolute;
-      background: linear-gradient(45deg, var(--primary), var(--accent));
-      opacity: 0.1;
-      filter: blur(40px);
+      .big-btn {
+        font-size: 1em;
+        padding: 12px 24px;
+      }
     }
   </style>
 </head>
 
 <body>
-  <div class="loading-bar"></div>
-  <div class="floating-shapes">
-    <div style="width: 200px; height: 200px; top: 20%; left: 10%"></div>
-    <div style="width: 150px; height: 150px; top: 60%; right: 15%"></div>
-  </div>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
 
   <div id="root">
     <div class="landing-page">
-      <div class="hero-text">
-        <i class="fas fa-shield-alt"></i> Convert JPEG or PNG images to PDF securely
+      <div style="padding: 40px">
+        Convert JPEG or PNG images to PDF without uploading your sensitive data anywhere.
         <br />
-        <span style="font-size: 0.9em; color: #64748b;">
-          All processing happens locally in your browser - no data leaves your device
-        </span>
+        Files are processed entirely on your device and do not get uploaded to any server.
       </div>
-
-      <button class="big-btn">
-        <i class="fas fa-folder-open"></i> Select Images
-        <span class="hover-effect"></span>
-      </button>
-
-      <div class="security-badge">
-        <i class="fas fa-lock"></i>
-        <span>100% Client-Side Processing</span>
+      <button class="big-btn">Select Images</button>
+      <div class="dropzone">
+        Drag and drop your images here
       </div>
-
-      <div class="dropzone"></div>
     </div>
   </div>
-
-  <script>
-    // Add subtle hover effect to buttons
-    document.querySelectorAll('.big-btn').forEach(btn => {
-      btn.addEventListener('mousemove', e => {
-        const rect = btn.getBoundingClientRect();
-        btn.style.setProperty('--x', `${e.clientX - rect.left}px`);
-        btn.style.setProperty('--y', `${e.clientY - rect.top}px`);
-      });
-    });
-  </script>
 </body>
+
 </html>
